--- a/usage.html
+++ b/usage.html
@@ -173,7 +173,7 @@ helix. The keymappings have been inspired from <a href="https://github.com/macha
 </ul>
 <p><code>ms</code> acts on a selection, so select the text first and use <code>ms&lt;char&gt;</code>. <code>mr</code> and <code>md</code> work
 on the closest pairs found and selections are not required; use counts to act in outer pairs.</p>
-<p>It can also act on multiple seletions (yay!). For example, to change every occurance of <code>(use)</code> to <code>[use]</code>:</p>
+<p>It can also act on multiple selections (yay!). For example, to change every occurrence of <code>(use)</code> to <code>[use]</code>:</p>
 <ul>
 <li><code>%</code> to select the whole file</li>
 <li><code>s</code> to split the selections on a search term</li>
@@ -195,12 +195,27 @@ on the closest pairs found and selections are not required; use counts to act in
 <tr><td><code>(</code>, <code>[</code>, <code>'</code>, etc</td><td>Specified surround pairs</td></tr>
 <tr><td><code>f</code></td><td>Function</td></tr>
 <tr><td><code>c</code></td><td>Class</td></tr>
-<tr><td><code>p</code></td><td>Parameter</td></tr>
+<tr><td><code>a</code></td><td>Argument/parameter</td></tr>
+<tr><td><code>o</code></td><td>Comment</td></tr>
 </tbody></table>
-<p>Note: <code>f</code>, <code>c</code>, etc need a tree-sitter grammar active for the current
-document and a special tree-sitter query file to work properly. <a href="https://github.com/search?q=repo%3Ahelix-editor%2Fhelix+filename%3Atextobjects.scm&amp;type=Code&amp;ref=advsearch&amp;l=&amp;l=">Only
-some grammars</a>
-currently have the query file implemented. Contributions are welcome !</p>
+<blockquote>
+<p>NOTE: <code>f</code>, <code>c</code>, etc need a tree-sitter grammar active for the current
+document and a special tree-sitter query file to work properly. <a href="./lang-support.html">Only
+some grammars</a> currently have the query file implemented.
+Contributions are welcome!</p>
+</blockquote>
+<h2 id="tree-sitter-textobject-based-navigation"><a class="header" href="#tree-sitter-textobject-based-navigation">Tree-sitter Textobject Based Navigation</a></h2>
+<p>Navigating between functions, classes, parameters, etc is made
+possible by leveraging tree-sitter and textobjects queries. For
+example to move to the next function use <code>]f</code>, to move to previous
+class use <code>[c</code>, and so on.</p>
+<p><img src="https://user-images.githubusercontent.com/23398472/152332550-7dfff043-36a2-4aec-b8f2-77c13eb56d6f.gif" alt="tree-sitter-nav-demo" /></p>
+<p>See the <a href="./keymap.html#unimpaired">unimpaired</a> section of the keybind
+documentation for the full reference.</p>
+<blockquote>
+<p>NOTE: This feature is dependent on tree-sitter based textobjects
+and therefore requires the corresponding query file to work properly.</p>
+</blockquote>
 
                     </main>
 
